styles/minmaster.css
@media only screen and (max-width: 1237px) {

  /* The blue bar at the top */
  .brand {
    margin-bottom: 0;
    margin-top: 0;
    width: 40rem;
    height: 3rem;
  }

  /* The name inside it */
  .brand-name {
    margin: 0.5rem 0 1.3rem 17rem;
    font-size: 2rem;
  }

  .nav-links {
    border-spacing: 0.7rem;
    margin: 0 0 0 12rem;
    padding: 0;
  }

  /* Left Side */
  .left-side {
    padding: 0;
    text-align: center;
  }

  /* Festival */

  .abt-cntnt {
    flex-basis: auto;
    font-size: 1rem;
  }

  /* Tool Panel */
  .tool-panel {
    font: 1rem;
    background-color: #39a2db;
    width: 16rem;
    margin: 1rem;
    flex-basis: auto;
    text-align: center;
    transition: 0.3s ease 0s, left 0.3s ease 0s;
  }
}

@media only screen and (max-width: 1071px) {
  /* Tools */
  /* Tool Panel */
  .tool-panel {
    font: 1rem;
    background-color: #39a2db;
    width: 25rem;
    margin: 1rem;
    flex-basis: auto;
    text-align: center;
    transition: 0.3s ease 0s, left 0.3s ease 0s;
  }
}

@media only screen and (max-width: 600px) {

  /* Floating Navbar */
  .navbar {
    visibility: hidden;
    /* Position */
    position: fixed;
  }

  /* Toggleable class */
  .visible {
    visibility: visible;
  }

  .page-panel-mobile {
    color: #39a2db;
    display: inline;
    background-color: #202225;
    width: 25rem;
    margin: 1rem;
    flex-basis: auto;
    text-align: center;
    padding: 1.5rem 1rem;
  }

  /* The blue bar at the top */
  .brand {
    border-radius: 0 0 3.8rem 0;
    box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.25);
    margin-bottom: 0;
    width: 22rem;
    height: 4rem;
  }

  .brand-img {
    border-radius: 2.5rem;
    height: 5rem;
    width: 5rem;
  }

  /* The name inside it */
  .brand-name {
    margin: 1.3rem 0 1.3rem 7rem;
    font-size: 1.7rem;
  }

  /* The logo is always visible */
  .brand-img {
    left: .5rem;
    top: .5rem;
    visibility: visible;
  }

  /* The blue box below the cyan bar */
  .nav-link-container {
    background-color: #17454f;
    border-radius: 0 0 5px 5px;
    box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.25);
  }

  .nav-links {
    border-spacing: 0.7rem;
    margin: 0;
    padding: 0 4rem;
  }

  /* Arrange them vertically */
  .nav-links li {
    display: table-row;
    padding: 0;
  }

  .nav-link {
    margin: .5rem 0;
  }

  .content {
    padding: 1.5rem;
  }

  /* Festival Box */
  .festival-container {
    width: 22.5rem;
    height: 10rem;
    margin-bottom: 2rem;
  }

  /* Announcement Box */
  .ann-container {
    width: 22rem;
    height: 20rem;
    margin-bottom: 2rem;
  }

  /* Quote */
  .quote-container {
    width: auto;
    max-width: 285px;
    padding: 2rem;
    margin-bottom: 2rem;
  }

  /* Tools */
  /* Tool Panel */
  .tool-panel {
    font: 1rem;
    background-color: #39a2db;
    width: 25rem;
    margin: 1rem;
    flex-basis: auto;
    text-align: center;
    transition: 0.3s ease 0s, left 0.3s ease 0s;
  }
}

